[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Creatures/Creature001.png" type="Texture" id=1]
[ext_resource path="res://Source/TitleScreen/TitleButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/TitleScreen/TitleScreen.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.862745 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_right = 1024.0
margin_bottom = 896.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Margin/VBox"]
margin_top = 141.0
margin_right = 1024.0
margin_bottom = 155.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Creature Catch"
align = 1
valign = 1

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 300.0
margin_right = 1024.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 350

[node name="VBox2" type="VBoxContainer" parent="Margin/VBox/HBox"]
margin_right = 337.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="NewGame" parent="Margin/VBox/HBox/VBox2" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 337.0
margin_bottom = 96.0
size_flags_horizontal = 3
scene_to_load = "res://Source/RouteScenes/Route2/Route2Scene.tscn"
sceneName = "Route2Scene"
button_label = "New Game"

[node name="Continue" parent="Margin/VBox/HBox/VBox2" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 100.0
margin_right = 337.0
margin_bottom = 196.0
size_flags_horizontal = 3
disabled = true
button_label = "Continue"

[node name="Options" parent="Margin/VBox/HBox/VBox2" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 200.0
margin_right = 337.0
margin_bottom = 296.0
size_flags_horizontal = 3
disabled = true
button_label = "Options"

[node name="MascotImage" type="CenterContainer" parent="Margin/VBox/HBox"]
margin_left = 687.0
margin_right = 1024.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sprite" type="Sprite" parent="Margin/VBox/HBox/MascotImage"]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
centered = false
hframes = 4

[node name="Footer" type="MarginContainer" parent="Margin/VBox"]
margin_top = 600.0
margin_right = 1024.0
margin_bottom = 896.0
size_flags_vertical = 3

[node name="FadeInRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="AnimationPlayer" parent="FadeInRect"]
anims/fade_in = SubResource( 1 )
